# gpu-kv-cache

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: RESULTS.md
include/: cuda_utils.cuh  gpu_hash_table.cuh  workload.cuh
scripts/: plot_results.py  profile_ncu.sh  profile_nsys.sh  run_benchmark.sh
src/: benchmark.cu  demo.cu  gpu_hash_table.cu  profile_kernels.cu  streams_benchmark.cu  unified_memory_benchmark.cu
tests/: test_correctness.cu
